--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "builds": [
+    {
+      "src": "nuxt.config.js",
+      "use": "@nuxtjs/vercel-builder",
+      "config": {}
+    }
+  ],
   "rewrites": [
     {
       "source": "/getProductsByCategory",
@@ -50,20 +57,5 @@
     { "source": "/processPayment", "destination": "/api/routes" },
     { "source": "/addCoupons", "destination": "/api/routes" },
     { "source": "/storefront", "destination": "/api/routes" }
-  ],
-  "env": {
-    "APP_NAME": "BigCommerce Nuxt Vue Starter",
-    "PORT": "3000",
-    "JWT_SECRET": "***",
-    "BC_API_URL": "https://api.bigcommerce.com",
-    "STORE_HASH": "***",
-    "API_TOKEN": "***",
-    "API_CLIENT_ID": "***",
-    "API_SECRET": "***",
-    "CHANNEL_ID": "***",
-    "BASE_URL": "https://store-storehash-channelid.mybigcommerce.com",
-    "STOREFRONT_API_TOKEN": "***",
-    "CHECKOUT_TYPE": "embedded",
-    "PAYMENT_URL": "https://payments.bigcommerce.com"
-  }
+  ]
 }
